--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ src: url('../font/cali.ttf'),
 
 
 body {
-	background-color: rgb(1, 1, 1);
 	margin: 0;
 	padding: 0;
 	color:#fff;
@@ -27,12 +26,16 @@ body {
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
 }
 
-
-.dessous {
-	z-index: -20 !important;
+.titre{
+	position: relative;
+	top: 5px;
 }
 
-.acceuil div{
+.dessous {
+	z-index: 1 !important;
+}
+
+.linbloc{
 	display: inline-block;
 }
 
@@ -53,25 +56,61 @@ body {
 	
 }
 
+.margins {
+	margin-top: 80px;
+}
+
 #blocmenu {
 	z-index: 50;
 	height: 60px;
 	width: 100%;
-	background-color: rgb(1, 1, 1);
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 
 }
 
+.blanc {
+	background-color: rgb(255, 255, 255);
+}
+
+.noir {
+	background-color: rgb(1, 1, 1) !important;	
+}
+
+.textenoir {
+	color: #010101;
+}
+
+.menucentre {
+	position: relative;
+	top: 12px;
+}
+
 .transition {
-	transition: all 0.2s;
-	-moz-transition: all 0.2s;
-	-webkit-transition: all 0.2s;
+	transition: all linear 0.4s;
+	-moz-transition: all linear 0.4s;
+	-webkit-transition: all linear 0.4s;
 }
 
 .all {
 	z-index: 20;
+	margin-top: 60px;
+/*	width: 700%;*/
+	
 }
+
+.page {
+	position: relative;
+	top: 50px;
+}
+
+.pagein {
+	width: 79%;
+	margin-right: 10%;
+	margin-left: 10%;
+	border: 1px solid #333333;
+}
+
 
 .menutop {
 	position: fixed !important;
@@ -81,18 +120,34 @@ body {
 .ligneblanche {
 	background-color: #ffffff;
 	width: 100%;
-	height: 6px;
+	height: 5px;
+
+}
+
+.interligne {
+	background-color: #ffffff;
+	width: 100%;
+	height: 10px;
+}
+
+.lignenoir {
+	background-color: #010101;
+	width: 100%;
+	height: 4px;
 
 }
 
 .header {
 	font-size: 25px;
 	text-align: center;
+	height: 60px;
+	margin: 0;
 }
 
 
 #header span {
 	cursor: pointer;
+
 }
 
 .lignebloc {
@@ -100,7 +155,7 @@ body {
 }
 
 .resize {
-	margin-top: 60px;
+	margin-top: 0px;
 }
 
 .footer {
@@ -110,5 +165,80 @@ body {
 	font-size: 20px;
 	position: fixed;
 	bottom: 0;
-	background-color: #010101;
+}
+
+/* CSS Page About */
+
+.abouttext {
+	width: 450px;
+
+}
+
+.aboutimg img {
+	width: 450px;
+	
+
+}
+/* CSS DES SLIDES */
+
+#slide_home, #slide0, #slide1, #slide2, #slide3, #slide4, #slide5 {
+	/*height: 586px;*/
+	padding-top:60px;
+}
+
+#slide_home {
+	
+}
+
+#slide0 {
+		
+}
+
+#slide1 {
+	
+}
+
+#slide2 {
+	background: url(../images/slide2-bg.jpg) center 0 no-repeat fixed;
+}
+
+#slide3 {
+	background: url(../images/slide3-bg.jpg) center 0 no-repeat fixed;
+}
+
+#slide4 {
+	background: url(../images/slide3-bg.jpg) center 0 no-repeat fixed;
+}
+
+#slide5 {
+	background: url(../images/slide3-bg.jpg) center 0 no-repeat fixed;
+}
+
+
+/* Gestion du contenu */
+.slide_inside {
+	width: 980px;
+	margin: 0 auto;
+}
+
+#slide_home  .slide_inside {
+	text-align:center;
+}
+
+#slide1 .slide_inside {
+	background-color: rgba(0, 0, 0, 0.5);
+	margin-top:2%;
+	margin-bottom: 50px;
+	padding:4%;
+}
+
+#slide2 .slide_inside p {
+	width: 500px;
+	text-align:justify;
+}
+
+#slide3 .slide_inside {
+	background-color: rgba(0, 0, 0, 0.5);
+	margin-top:50px;
+	padding:50px;
 }
