--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,15 @@
-/*  
-SatProd Design
-Copyright 2013 - Philes Gilles
-*/
+										/*---------------------------------------
+										|										|
+										|			CREATED AND DESIGNED 		|
+										|					BY 					|
+										|		Louis Borsu & Philes Gilles 	|
+										|			Satprod Engineering 		|
+										|										|
+										---------------------------------------*/
 
+@import url(http://fonts.googleapis.com/css?family=Meddon);
 
-/* Generals */
-
-/* Colors 
-blanc = #ffffff
-noir = #010101
-
-*/
-
-
+												/* Font Face */
 
 @font-face{
 font-family: cali;
@@ -31,172 +28,89 @@ src: url('../font/Elegantlight.ttf');
 
 } 
 
+
+												/* Media Queries */
+
+@media only screen  and (max-device-width : 1024px) {
+		.menutop {
+			
+		}
+
+		.menucentre {
+			top: 10px !important;
+		}
+
+		.header {
+			font-size: 30px !important;
+		}
+
+		.fl {
+			float: none;
+			width: 100%;
+			text-align: center;
+		}
+
+		.contactbox{
+			margin: auto;
+			float: none;
+			width: 100% !important;
+			font-size: 1.5em !important;
+		}
+
+		.expl{
+			
+			width: 57% !important;
+			
+		}
+
+		.galleryinside {
+			
+		    width: 40% !important;
+		    position: relative;
+		    right: 1%;
+
+		}
+}
+
+@media only screen  and (orientation : portrait) {
+				.expl{
+			
+			width: 65% !important;
+			
+		}
+
+		.galleryinside {
+			
+		    width: 32% !important;
+		    position: relative;
+		    right: 2.5%;
+
+		}
+}
+
+
+
+
+												/* CORE PAGE */
+html {
+	font-size: 16px;
+}
+
 body {
 	margin: 0;
 	padding: 0;
-	font: normal 90% thin 'beba' "Lucida Grande",Tahoma,Arial,Helvetica,Sans-Serif;
 	overflow: hidden;
-	width: 100%;
-	height: 100%;
+	font-size: 62,5%;
 
 }
 
-h2 {
-	padding-left: 20px;
-	font-size: 25px;
-	text-transform: uppercase;
+h1 {
+	font-weight: normal;
 }
 
-p {
-	padding-left: 20px;
+span {
+	font-weight: normal;
 }
-
-
-
-/* Page Acceuil */
-
-.titre{
-	position: relative;
-	top: 5px;
-	color: #fff;
-}
-
-.dessous {
-	z-index: 1 !important;
-}
-
-.linbloc{
-	display: inline-block;
-}
-
-.titreacceuil {
-	height: 20%;
-}
-
-.acceuila{
-	margin: 0;
-	font-family: cali;
-	font-size: 40px;
-	text-align: center;
-}
-.acceuilb{
-	margin: 0;
-}
-
-.acceuilstuff {
-	background-color: rgb(255, 255, 255);	
-	height:500px; 	
-	width:980px;
-	
-}
-
-.except {
-	font-size: 22px;
-	text-align: center;
-	position: relative;
-	top:12px;
-	color: #010101;
-	z-index: 2
-}
-
-.all {
-	z-index: 20;
-	
-/*	width: 700%;*/
-	
-}
-
-.page {
-	position: relative;
-	overflow: hidden;
-}
-
-.pagein {
-	width: 79%;
-	margin-right: 10%;
-	margin-left: 10%;
-	border: 1px solid #333333;
-	/*text-transform: uppercase;*/
-	text-decoration: none;
-	font-size: 20px;
-}
-
-
-
-
-/* CSS Menu */
-
-.menutop {
-	position: fixed !important;
-	top: 0;
-}
-
-.header {
-	font-size: 38px;
-	text-align: center;
-	min-height: 60px;
-	margin: 0;
-}
-
-
-#header span {
-	cursor: pointer;
-
-}
-
-.menucentre {
-	position: relative;
-	top: 14px;
-}
-
-#blocmenu {
-	z-index: 50;
-	/*height: 60px;*/
-	width: 100%;
-	position: fixed;
-	bottom: 0;
-	text-transform: uppercase;
-	color: #fff;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
-
-}
-
-.ligneblanche {
-	background-color: #ffffff;
-	width: 100%;
-	height: 5px;
-
-}
-
-.interligne {
-	background-color: #ffffff;
-	width: 100%;
-	height: 10px;
-}
-
-.lignenoir {
-	background-color: #010101;
-	width: 100%;
-	height: 2px;
-
-}
-
-
-.lignebloc {
-	display: inline-block;
-}
-
-/* general pages */
-
-.resize {
-	margin-top: 0px;
-}
-
-.margins {
-	margin-top: 80px;
-}
-
-
 
 .blanc {
 	background-color: rgb(255, 255, 255);
@@ -210,6 +124,25 @@ p {
 	color: #010101;
 }
 
+.page{
+	margin: 0;
+	overflow: none;
+	-webkit-overflow-scrolling : none;
+	float: left;
+	font-family: Ambassador;
+
+}
+
+.pagein {
+	width: auto;
+	border: 1px solid #333333;
+	/*text-transform: uppercase;*/
+	text-decoration: none;
+	font-size: 20px;
+}
+
+
+												/* Animations */
 
 .transition {
 	transition: all linear 0.4s;
@@ -218,185 +151,192 @@ p {
 }
 
 
-.logopage {
-	width: 250px;
-	height: 13%;
-	background-color: #010101;
-}
+												/* CSS Menu */
 
-/* CSS Page Description */
-
-.page1 {
-	background-image:url('../images/immeuble/20130527_RES_BBRA_PDK-53-M.jpg');
-	background-size:100% 100%;
-	background-image-opacity:0.9; 
-}
-
-.description1 {
-	background: rgba(255,255,255,0.9);
-	height: 68%;
-	width: 80%;
+.menucentre {
 	position: relative;
-	left: 140px;
-	box-shadow: 5px 5px 4px rgba(1,1,1,0.8);
+	top: 5px;
 }
 
-/* CSS Page Inside */
-
-.abouttext {
-	width: 450px; 
+.menutop {
+	position: fixed;
+	bottom: 100% !important;
+	margin-bottom: -62px;
 }
 
-.page2 {
-	background-image:url('../images/immeuble/20130527_RES_BBRA_PDK-3-M.jpg');
-	background-size:100% 100%;
-	background-image-opacity:0.8; 
+.header {
+	font-size: 38px;
+	text-align: center;
+	margin: 0;
+	min-height: 60px;
+	
 }
 
-.aboutimg img {
-	width: 450px;
+
+#header span {
+	cursor: pointer;
+	font-family: 'Ambassador';
+	font-weight: 400 !important;
 	
 
 }
-/* CSS Page Inside */
 
-.page3 {
+/*.menucentre {
+	position: relative;
+	top: 14px;
+}*/
+
+#blocmenu {
+	z-index: 50;
+	width: 100%;
+	position: fixed;
+	bottom: 0%;
+	text-transform: uppercase;
+	color: #fff;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+
+}
+
+.ligneblanche {
+	background-color: #ffffff;
+	width: 100%;
+	height: 2px;
+
+}
+
+.interligne {
+	background-color: #ffffff;
+	width: 100%;
+	height: 10px;
+}
+
+.lignenoir {
+	background-color: #010101 !important;
+	width: 100%;
+	height: 2px;
+
+}
+
+
+
+												/* PAGE ACCEUIL */
+
+
+
+.pageaccin {
+	width: auto;
+	border: 1px solid #333333;
+	/*text-transform: uppercase;*/
+	text-decoration: none;
+	font-size: 20px;
+}
+
+.titre{
+	position: relative;
+	top: 5px;
+	color: #fff;
+	font-family: 'Ambassador Script';
+	font-size: 1.8em;
+}
+
+#pageacceuil{
+	background-color: rgb(255,255,255);
+}
+
+.dessous {
+	z-index: 1 !important;
+}
+
+.linbloc{
+	display: inline-block;
+}
+
+
+.acceuila{
+	margin: 0;
+	font-family: cali;
+	font-size: 40px;
+	text-align: center;
+	background-color: rgb(1,1,1);
+}
+/*.acceuilb{
+	margin: 0;
+	position: relative;
+	top: -6.5%;
+}*/
+
+.except {
+	font-size: 22px;
+	text-align: center;
+	color: #010101;
+	z-index: 2
+}
+
+												/* DESCRIPTION */
+.top {
+	position: relative;
+	top:0;
+}
+
+												/* INSIDE */
+.fancybox-skin{
+    cursor: e-resize;
+}
+
+.inside {
 	background-image:url('../images/immeuble/20130527_RES_BBRA_PDK-41-M.jpg');
 	background-size:100% 100%;
 	background-image-opacity:0.9;
-	 
 }
 
 .expl{
 	float: left;
-	width: 35%;
-	max-height: 80%;
+	width: 47%;
+	max-height: 90%;
 	margin-left: 3%;
-	background: rgba(255,255,255,0.7);
+	background: rgba(255,255,255,0.9);
 	position: relative;
 	top: 5%;
-	box-shadow: 5px 5px 4px rgba(1,1,1,0.8);
+	box-shadow: 5px 5px 4px rgba(1,1,1,0.7);
 	overflow: auto ;
+	font-family: 'Ambassador';
 }
 
 .galleryinside {
-	
-	overflow: auto;
-    float: right;
-    width: 100%;   
-    overflow: hidden !important;
+	float: right;
+    width: 50%;
+    height: 90%;
+    position: relative;
+    top: 5%;   
+    overflow-y: scroll !important;
+    -webkit-overflow-y-scrolling: touch;
     overflow-x: hidden !important;
 
 
 }
 
-.descr {
-	font-size: 15px;
-	font-family: Arial,sans-serif;
-	background: rgba(255,255,255,0.7);
-	float: right;
-	width: 55%;
-	height: 94%;
-	padding-top: 2%;
-	padding-bottom: 1.5%;
-	padding-left:4%;
-	position: relative;
-	top: -13%;
-	z-index: 5;
-	overflow-y: auto;
-	overflow-x: hidden !important;
-
-}
-
 .photos{
-	margin: auto;
-}
- 
-
-
-
-/* CSS Page Design */
-
-.page4 {
-	background-image:url('../images/immeuble/20130527_RES_BBRA_PDK-30-M.jpg');
-	background-size:100% 100%;
-	background-image-opacity:0.9; 
+	margin-right: 12px;
 }
 
-
-
-/* CSS DES SLIDES */
-
-#slide_home, #slide0, #slide1, #slide2, #slide3, #slide4, #slide5 {
-	/*height: 586px;*/
-	padding-top:60px;
-}
-
-#slide_home {
-	
-}
-
-#slide0 {
-		
-}
-
-#slide1 {
-	
-}
-
-#slide2 {
-	background: url(../images/slide2-bg.jpg) center 0 no-repeat fixed;
-}
-
-#slide3 {
-	background: url(../images/slide3-bg.jpg) center 0 no-repeat fixed;
-}
-
-#slide4 {
-	background: url(../images/slide3-bg.jpg) center 0 no-repeat fixed;
-}
-
-#slide5 {
-	background: url(../images/slide3-bg.jpg) center 0 no-repeat fixed;
-}
-
-
-/* Gestion du contenu */
-.slide_inside {
-	width: 980px;
-	margin: 0 auto;
-}
-
-#slide_home  .slide_inside {
-	text-align:center;
-}
-
-#slide1 .slide_inside {
-	background-color: rgba(0, 0, 0, 0.5);
-	margin-top:2%;
-	margin-bottom: 50px;
-	padding:4%;
-}
-
-#slide2 .slide_inside p {
-	width: 500px;
-	text-align:justify;
-}
-
-#slide3 .slide_inside {
-	background-color: rgba(0, 0, 0, 0.5);
-	margin-top:50px;
-	padding:50px;
-}
-
-/* Page Contact */
-
-.contact {
+.photos img {
 	float: right;
-	padding-right: 30px;
+	margin: 3px;
 }
 
-/* Footer */
+												/* DESIGN */
+
+
+												/* TOUR */
+
+
+												/* SERVICES */
+
+
+												/* CONTACT */
+
+
+												/* FOOTER */
 
 .footer {
 	
@@ -409,22 +349,24 @@ p {
 
 .fl {
 	float: left;
+	font-family: 'Ambassador';
 	/*width: 420px;*/
 }
 
-/* Contact Box */
+												/* Contact Box */
 
 .contactbox {
 	
 	float: right;
-	
+	font-family: 'Ambassador';
+	font-weight: bold;
 	right: 0px;
 	z-index: 100;
 	min-height: 35px;
-	width: 600px;
+	width: auto;
 	background-color: #010101;
 	color: #fff;
-	font-size: 22px;
+	font-size: 1.5em;
 
 }
 
@@ -441,19 +383,20 @@ p {
 
 input[type=submit], input[type=reset] {
  width:50px;
- height: 25px;
  border-radius: 0;
+ height: auto;
  margin-left:5px;
  background-color: #010101;
  color: #fff;
  cursor:pointer;
  border: 1px solid #fff;
  margin-right: 6px;
+ -webkit-appearance: none;
  }
 
  input[type=text] {
  width:200px;
- height: 23px;
+ height: auto;
  border-radius: 0;
  margin-left:12px;
  background-color: #fff;
@@ -474,66 +417,3 @@ input[type=submit], input[type=reset] {
  border: 1px solid #333333;
  margin-right: 0px;
  }
-
- /*------------------------
-
-		MEDIA QUERIES 
-
-------------------------*/
-
-@media screen and (max-width: 1023px) {
-	.divcont {
-		text-align: center;
-		
-
-	}
-
-	.fl{
-		float: none;
-		background: #fff;
-		
-	}
-
-	.expl {
-		width: 90%;
-		padding-left: 5% !important;
-		max-height: 35%;
-		float: none;
-	}
-
-	.descr {
-		width: 90%;
-		height: 35%;
-		padding-top: 5px;
-		padding-left: 5% !important;
-		margin-left: 3% !important;
-		float: none;
-		position: relative;
-		top: 60px;
-		box-shadow: 5px 5px 4px rgba(1,1,1,0.8);
-	}
-
-	.galhaut{
-		position: relative;
-		right: 00px;
-		float: none;
-		margin-left: auto;
-		margin-right: auto;
-}
-
-
-
-	.contactbox {
-		width: 100%;
-		float: none;
-		font-size: 28px;
-		background: #010101;
-		padding-bottom: 3px;
-	}
-
-	.footer {
-		text-align: center;
-		
-		
-	}
-}
