--- a/css/style.css
+++ b/css/style.css
@@ -79,15 +79,22 @@ li {
 }
 
 .flaglang:hover {
-	-webkit-filter: grayscale(0%);
-	-moz-filter: grayscale(0%);
-	filter: grayscale(0%);
+	-webkit-filter: grayscale(30%);
+	-moz-filter: grayscale(30%);
+	filter: grayscale(30%);
+	transform:scale(1.2,1.2);
+	-ms-transform:scale(1.2,1.2); /* IE 9 */
+	-webkit-transform:scale(1.2,1.2);
+
 }
 
-.flaglangactive {
-	-webkit-filter: grayscale(0%);
-	-moz-filter: grayscale(0%);
-	filter: grayscale(0%);
+.langactiv {
+	-webkit-filter: grayscale(0%) !important;
+	-moz-filter: grayscale(0%) !important;
+	filter: grayscale(0%) !important;
+	transform:scale(1.1,1.1);
+	-ms-transform:scale(1.1,1.1); /* IE 9 */
+	-webkit-transform:scale(1.1,1.1);
 }
 
 li:hover{
